scrollbar fix

--- a/src/styles/blocks/feedback.scss
+++ b/src/styles/blocks/feedback.scss
@@ -220,7 +220,6 @@
 	background: #09151F;
 	box-sizing: border-box;
 	position: relative;
-	overflow: hidden;
 	display: none;
 	padding: 0;
 	@media (max-width: 1300px){
